@@ -14,6 +14,9 @@
 
   5. Update all dependencies to latest versions.
 
+  6. Disable GCS Metadata Cache by default (e.g. set default value of
+     `fs.gs.metadata.cache.enable` property to `false`).
+
 
 1.6.2 - 2017-11-21
 
